-Minor spacing issue with dashboard feed.

--- a/rootlessme/web/css/dashboard.css
+++ b/rootlessme/web/css/dashboard.css
@@ -124,7 +124,7 @@
 #feedRiders {
     font-size: 80%;
     font-style: italic;
-    margin: 5px 0px 5px 0px;
+    margin: 2px 0px 2px 0px;
 }
 
 #feedTime {
